# FunFS

./: .gitignore  CMakeLists.txt  FunFS.bin.txt  drafts.txt  main.c
src/: CMakeLists.txt  debug.c  debug.h  filesystem.h  flash_emu.c  flash_emu.h  flashmngr.h  funfs.c  funfs.h  iso7816.c  iso7816.h  iso7816_apdu.c  iso7816_apdu.h  iso7816_cmd.c  iso7816_cmd.h  iso7816_helpers.c  iso7816_helpers.h  iso7816_se.c  iso7816_se.h  main.c  tests_main.c
src/platform/: CMakeLists.txt
src/platform/simulator/: debug.c  debug.h  flash_emu.c  flash_emu.h  simu_udp.c  simu_udp.h
tests/: 01_write_odd_test.py  02_write_even_test.py  03_access_rules_test.py  example_test.py  tests_common.py
